# workflow-inference-compiler

./: .codespellrc  .coveragerc  .coveragerc_serial  .coveragerc_unit  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .sample_env  Dockerfile  Dockerfile.api  LICENSE  MANIFEST.in  README.md  RealtimePlots.py  WatchdogPlots.py  api.py  atomselect_demo.py  cli.py  codespellwords.txt  compiler.py  conda_devtools.sh  conda_devtools.yml  conda_devtools_windows.yml  conftest.py  conversion.yml  docker-compose.yml  dockerPull.sh  docker_remove_entrypoints.py  expand_workflow.py  gromacs_tutorial.yml  gromacs_tutorial_expanded.cwl  gromacs_tutorial_inputs.yml  gromacs_tutorial_setup.cwl  gromacs_tutorial_setup.yml  gromacs_tutorial_setup_inputs.yml  gromacs_tutorial_subworkflow.cwl  gromacs_tutorial_subworkflow.yml  (+38 more)
.github/workflows/: branch_dispatch.md  branch_dispatch.yml  branch_dispatch_pull_request.yml  branch_dispatch_push.yml  branch_dispatch_repository_dispatch.yml  build_and_run_workflows.yml  build_and_run_workflows_toil.yml  build_and_test.yml  build_and_test_ubuntu.yml  build_wheel.yml  docker_build.yml  docker_build_plugins.yml  fuzzy_compile_weekly.yml  lint_and_test.yml  lint_and_test_macos.yml  main.yml  publish_rest_docker.yml  run_workflows.yml  run_workflows_weekly.yml  test_and_publish_pypi.yml  token.md
auth/: auth.py  settings.py
biosimspace/io/: bss_amb_gro.cwl  bss_gro_amb.cwl  conversion.py
cwl_adapters/: acpype.cwl  ambiguous.cwl  append.cwl  array_float.cwl  array_indices.cwl  array_int.cwl  autodock_vina_batch.cwl  autodock_vina_filter.cwl  autodock_vina_rescore.cwl  bash_docker_build.cwl  bash_mol2.cwl  bash_pdb.cwl  bash_pdb_2.cwl  bash_top.cwl  bash_xvg.cwl  cat.cwl  cat_sdf.cwl  check_linear_fit.cwl  config_tag_pdb.cwl  convert_mol2.cwl  convert_pdbqt.cwl  download_ligand_database.cwl  download_ligand_database_xlsx.cwl  download_pdbbind_refined.cwl  dup.cwl  duplicate.cwl  duplicate2D.cwl  echo.cwl  echo_3.cwl  extract_files.cwl  extract_molecules_sdf.cwl  extract_pdbbind_refined.cwl  fail.cwl  filter_array.cwl  filter_file_array.cwl  filter_float_array.cwl  generate_conformers_sdf.cwl  glob_pattern.cwl  gmx_editconf.cwl  gmx_rms_nofit.cwl  (+25 more)
cwl_adapters/config_tag/: config_tag_box.cwl  config_tag_mdp.cwl  config_tag_pdb.cwl  config_tag_pdb2gmx.cwl
cwl_adapters/file_format_conversions/: unzip_top.cwl  zip_top.cwl
cwl_adapters/file_watchers/: cwl_subinterpreter.cwl  cwl_watcher.cwl
cwl_adapters/yank/: yank.cwl  yank_analyze.cwl  yank_analyze_report.cwl  yank_equil_prod.cwl  yank_setup_only.cwl  yank_trailblaze.cwl  yank_wrapper.py
deploy/helm/: Chart.yaml  values.yaml
docker/: Dockerfile_amazon  Dockerfile_amazon_pypy  Dockerfile_debian  Dockerfile_debian_pypy  Dockerfile_debian_rest  Dockerfile_debian_rest_api  Dockerfile_fedora  Dockerfile_fedora_pypy  Dockerfile_redhat  Dockerfile_redhat_pypy  Dockerfile_ubuntu  Dockerfile_ubuntu_REST  Dockerfile_ubuntu_pypy  docker-compose.yml  dockerBuild.sh
docs/: Makefile  advanced.md  compute.md  conf.py  devguide.md  index.rst  installguide.md  make.bat  overview.md  requirements.txt  userguide.md  validation.md
docs/_static/: style.css
docs/dev/: algorithms.md  api.rst  codingstandards.md  devguide.md  gitetiquette.md  installguide.md
docs/tutorials/: append_twice.wic  conditional_example.wic  config_ci.json  echo_multi_scatter.wic  fail.wic  fail.yml  fix_protein.yml  helloworld.md  helloworld.wic  helloworld.yml  multistep.md  multistep1.wic  multistep1.yml  multistep2.wic  multistep2.yml  multistep3.wic  multistep3.yml  naming_conventions.md  naming_conventions.wic  naming_conventions.yml  naming_conventions_explicit.wic  naming_conventions_explicit.yml  scatter_pyapi.py  subworkflows.md  test_rand_fail.wic  test_rand_fail.yml  tutorials.rst
examples/: scattering_scaling.wic  scattering_scaling.yml  secrets_echo.wic  test_nvidia_smi.wic  test_nvidia_smi.yml  test_rand_fail.yml
examples/conversions/: conversion.yml  npt_amber.yml
examples/data/: Dockerfile_data  download_data.sh
examples/docking/: align_protein_CA_pymol.yml  assign_partial_charges.yml  assign_partial_charges_batch.yml  autodock_vina_rescore.yml  convert_ligand_mol2_to_pdbqt_mdanalysis.yml  convert_ligand_mol2_to_pdbqt_obabel.yml  convert_pdbqt.yml  dock_ligand.yml  dock_pype.yml  docking.yml  docking_stability.yml  docking_stability_both.yml  download_smiles_ligand_db.yml  dsb.yml  dsb1.yml  elm.yml  extract_ligand_find_conformer.yml  extract_ligand_minimize_only.yml  extract_ligand_models.yml  find_ligand_conformer.yml  flc.yml  gen_topol_params.yml  ligand_modeling_docking.yml  ligand_topol_params.yml  minimize_ligand_only.yml  prepare_complex.yml  prepare_ligand_docking.yml  prepare_ligand_md.yml  receptor.yml  setup_pdb.yml  setup_receptor.yml  stability_complex.yml  vs_demo_1.yml  vs_demo_2.yml  vs_demo_3.yml  vs_demo_4.yml
examples/gromacs/: analysis.yml  analysis_final.yml  analysis_final_steps.yml  analysis_realtime.yml  analysis_realtime_complex.yml  analysis_realtime_ligand.yml  analysis_realtime_protein.yml  basic.yml  cg.yml  create_complex_gromacs.yml  cwl_watcher_analysis.yml  cwl_watcher_complex.yml  cwl_watcher_ligand.yml  cwl_watcher_protein.yml  download_pdb.yml  equil.yml  l-bfgs.mdp  l-bfgs.yml  min.mdin  min.yml  modeling.yml  nmr.yml  npt.mdin  npt.yml  npt_amber.yml  nvt.yml  (+14 more)
gpu/: mdrun.cwl
install/: install_biobb_adapters.sh  install_conda.bat  install_conda.sh  install_image-workflows.sh  install_mm-workflows.sh  install_nglview.sh  install_pypy.sh  install_system_deps.bat  install_system_deps.sh  install_timeseriesplots.sh  pypy.yml  pypy_docker_deps.yml  system_deps.yml  system_deps_windows.yml
tests/: single_node_helloworld.json  test_cli_flags.py  test_examples.py  test_fix_payload.py  test_fuzzy_compile.py  test_ict_to_clt_conversion.py  test_pythonapi.py  test_rest_core.py  test_rest_wfb.py  test_scattering_scaling.py  test_setup.py  test_units.py
viz_wflow/: assemble.cwl  filerenaming.cwl  precomputeslide.cwl  w1.py  w1test.yml
(+164 files in other folders)
