# Based on https://packaging.python.org/en/latest/tutorials/packaging-projects/
[build-system]
requires = ["jupyter_packaging~=0.7.9", "setuptools>=42", "wheel", "versioneer-518"]
# NOTE: The above list mostly comes from https://github.com/nglviewer/nglview/pull/969/files

build-backend = "setuptools.build_meta"
