# Based on https://packaging.python.org/en/latest/tutorials/packaging-projects/
[metadata]
name = workflow_inference_compiler
version = 0.0.1
author = Jake Fennick
author_email = jake.fennick@axleinfo.com
description = DSL for inferring the edges of a CWL workflow DAG, with examples in molecular dynamics
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jfennick/workflow_inference_compiler
project_urls =
    Bug Tracker = https://github.com/jfennick/workflow_inference_compiler/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
# NOTE: This 'graphviz' refers to the python bindings to the underlying
# system binary graphviz package (i.e. the `dot` executable) which we need to 
# install separately using either `conda install graphviz` or `sudo apt install graphviz`.
# This 'graphviz' is equivalent to `conda install python-graphviz` or
# `sudo apt install python3-graphiviz` ONLY.
# NOTE: Do NOT install cwltool here, due to it's ancient transitive dependency
# on mistune==0.8.4 which conflicts with nglview's mistune==2.0.4
    graphviz
    jsonschema
    pyyaml
    requests
    mergedeep
    networkx
    beautifulsoup4 # Solely for parsing gromacs mdp options html
    ipycytoscape # only for DAG visualization
    matplotlib # only for timeseries visualization
    ruptures # only for timeseries visualization

[options.extras_require]
tests =
    pytest
    pytest-cov
    pytest-parallel
    coverage
    mypy
    pylint

[options.entry_points]
console_scripts =
    wic = wic.main:main
    cwl_watcher = wic.cwl_watcher:main
    timeseries_plots = vis.timeseries:main

[options.packages.find]
where = src

[options.package_data]
* = *.txt

[aliases]
test = pytest --workers 4

[versioneer]
VCS = git
style = pep440-pre
versionfile_source = src/wic/_version.py
versionfile_build = wic/_version.py
tag_prefix = ''

[build_sphinx]
source_dir = docs