# Based on https://packaging.python.org/en/latest/tutorials/packaging-projects/
[metadata]
name = workflow-inference-compiler
version = 0.0.1
author = Jake Fennick
author_email = jake.fennick@axleinfo.com
description = DSL for inferring the edges of a CWL workflow DAG, with examples in molecular dynamics
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PolusAI/workflow-inference-compiler
project_urls =
    Bug Tracker = https://github.com/PolusAI/workflow-inference-compiler/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
# NOTE: This 'graphviz' refers to the python bindings to the underlying
# system binary graphviz package (i.e. the `dot` executable) which we need to
# install separately using either `conda install graphviz` or `sudo apt install graphviz`.
# This 'graphviz' is equivalent to `conda install python-graphviz` or
# `sudo apt install python3-graphviz` ONLY.
    graphviz
    jsonschema<4.18  # temporarily downgrade due to severe performance regression
    pyyaml
    requests
    mergedeep
    networkx
    beautifulsoup4 # Solely for parsing gromacs mdp options html
    cwl-utils
    typeguard

[options.extras_require]
test =
    pre-commit
    py  # See https://github.com/kevlened/pytest-parallel/pull/119
    pytest
    pytest-cov
    pytest-parallel
    coverage
    mypy
    %(mypy_types)s
    pylint
    autopep8
    pre-commit
    hypothesis
    hypothesis-jsonschema

# NOTE: The following list was generated using the command
# mypy --install-types
# When updating this list, also update .pre-commit-config.yaml
# Alternatively, the --non-interactive flag can be used install these automatically.
# See https://mypy.readthedocs.io/en/stable/command_line.html#miscellaneous
mypy_types =
    lxml-stubs
    types-Pillow
    types-PyYAML
    types-Pygments
    types-colorama
    types-decorator
    types-docutils
    types-jsonschema
    types-psutil
    types-python-jose
    types-pytz
    types-redis
    types-requests
    types-setuptools
    types-six
    types-urllib3

# NOTE: toil and cwltool have a somewhat continuous release model. However,
# there can be updates and bugfixes in main that have not yet been released.
# If you need to install from source, simply run `pip install .[runners_src]`
# This will overwrite the existing release versions, so if you want to revert
# to the release versions, `pip uninstall toil cwltool` and then `pip install .`
runners =
    toil[cwl]
    cwl-utils
runners_src =
    toil[cwl] @ git+https://github.com/jfennick/toil.git
    cwl-utils

# See docs/requirements.txt
doc =
    sphinx
    myst-parser
    sphinx-autodoc-typehints
    ipytree

restapi =
    python-jose[cryptography]==3.3.0
    # Temporarily downgrade pydantic below version 2.0 to avoid breaking changes.
    pydantic[dotenv]<2.0 # see auth/settings.py

plots =
    matplotlib

cyto =
    ipycytoscape # only for DAG visualization

all =
    %(test)s
    %(doc)s
    %(restapi)s
    %(plots)s
    %(cyto)s
    %(runners_src)s

[options.entry_points]
console_scripts =
    wic = wic.main:main
    cwl_watcher = wic.cwl_watcher:main

[options.packages.find]
where = src

[options.package_data]
* = *.txt

[aliases]
test = pytest --workers 8

[versioneer]
VCS = git
style = pep440-pre
versionfile_source = src/wic/_version.py
versionfile_build = wic/_version.py
tag_prefix = ''

[build_sphinx]
source_dir = docs
